--- a/NetSixTest.Api/appsettings.json
+++ b/NetSixTest.Api/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "Sqlite": "Data Source=dataApp.db"
+    "Sqlite": "Data Source=dataApp.db",
+    "SqlServer": ""
   },
+  
   "AllowedHosts": "*"
 }
